[package]
name = "cat-box"
version = "22.6.21"
edition = "2018"
license = "MIT"
description = "Work in progress game engine, inspired by arcade"
repository = "https://git.karx.xyz/karx/catbox"
readme = "README.md"
exclude = ["src/main.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.35.2"
features = ["image", "ttf"]

[dependencies]
rodio = { version = "0.15.0", optional = true}

[build-dependencies]
ureq = "2.6.2"
zip = "0.6.4"
tempfile = "3.5.0"

[features]
default = ["audio"]
static = ["sdl2/static-link", "sdl2/bundled"]
audio = ["dep:rodio"]
